字符串哈希

--- a/板子.md
+++ b/板子.md
@@ -97,6 +97,7 @@ int main() {
   - [后缀自动机](#后缀自动机)
   - [序列自动机](#序列自动机)
   - [回文自动机](#回文自动机)
+  - [字符串哈希](#字符串哈希)
 - [贪心](#贪心)
   - [一组交叉直线经过所有点](#一组交叉直线经过所有点) 
 - [二分](#二分)
@@ -3302,6 +3303,7 @@ struct SAM {
 		last = cur;
 		ends.push_back(cur);
 	}
+	// 洛谷P3804 求出 S 的所有出现次数不为 1 的子串的出现次数乘上该子串长度的最大值。
 	ll solve() const {
 		int n = nodes.size();
 		vector<int> indeg(n, 0), topoorder;
@@ -3357,8 +3359,6 @@ private:
 	int last;
 };
 ```
-
-
 
 ### 序列自动机
 ```c++
@@ -3437,6 +3437,39 @@ private:
 	vector<Node> nodes;
 	string s;
 	int last;
+};
+```
+
+### 字符串哈希
+```c++
+constexpr ull modulo = 10'0000'0007;
+const ull c = (ull)chrono::steady_clock::now().time_since_epoch().count();
+const ull mul1 = c % 131 + 131, mul2 = c % 13331 + 13331;
+constexpr int maxn = 10'0005;
+ull pmul1[maxn], pmul2[maxn];
+int init = [] {
+	pmul1[0] = pmul2[0] = 1;
+	for(int i = 1; i < maxn; ++i) {
+		pmul1[i] = pmul1[i - 1] * mul1 % modulo;
+		pmul2[i] = pmul2[i - 1] * mul2;
+	}
+	return 0;
+}();
+
+struct StringHash {
+	StringHash(const string &s) : p1(s.size() + 1, 0), p2(s.size() + 1, 0) {
+		for(int i = 0; i < s.size(); ++i) {
+			p1[i + 1] = (p1[i] * mul1 + s[i]) % modulo;
+			p2[i + 1] = p2[i] * mul2 + s[i];
+		}
+	}
+	ull substr(int l, int r) const {
+		ull ret1 = (p1[r] - p1[l] * pmul1[r - l] % modulo + modulo) % modulo;
+		ull ret2 = p2[r] - p2[l] * pmul2[r - l];
+		return (ret1 << 3) ^ (ret1 >> 5) ^ ret2;
+	}
+private:
+	vector<ull> p1, p2;
 };
 ```
 
