最小表示法

--- a/板子.md
+++ b/板子.md
@@ -3473,6 +3473,31 @@ private:
 };
 ```
 
+### 最小表示法
+```c++
+string minstr(const string &str) {
+	int n = str.size(), i = 0, j = 1, k = 0;
+	string s = str + str;
+	while(i < n && j < n) {
+		while(k < n && s[i + k] == s[j + k]) {
+			++k;
+		}
+		if(k == n)
+			break;
+		if(s[i + k] > s[j + k]) {
+			i += (k + 1);
+		} else {
+			j += (k + 1);
+		}
+		if(i == j) {
+			++j;
+		}
+		k = 0;
+	}
+	return s.substr(min(i, j), n);
+}
+```
+
 ## 贪心
 ### 一组交叉直线经过所有点
 ```c++
