--- a/板子.md
+++ b/板子.md
@@ -2665,6 +2665,7 @@ int cmp(ld a, ld b) {
 	return sign(a - b);
 }
 constexpr ld pi = 3.1415926535897932384626l;
+constexpr ld inf = 1e12l;
 ```
 
 ### 点和向量
@@ -2820,6 +2821,35 @@ ld dist(const Point &p, const Lineseg &ls) {
 }
 ```
 
+### 多边形
+```c++
+struct Polygon {
+	vector<Point> pts;
+	Polygon() {}
+	Polygon(const vector<Point> &p) : pts(p) {}
+	Polygon(const vector<Line> &l) {
+		pts.reserve(l.size());
+		for(int i = 0; i < l.size(); ++i) {
+			pts.emplace_back(inter(l[i], l[(i + 1) % l.size()]));
+		}
+	}
+	ld area() const {
+		ld ret = 0.0l;
+		for(int i = 0; i < pts.size(); ++i) {
+			ret += cross(pts[i], pts[(i + 1) % pts.size()]);
+		}
+		return ret / 2.0l;
+	}
+	ld circ() const {
+		ld ret = 0.0l;
+		for(int i = 0; i < pts.size(); ++i) {
+			ret += (pts[i] - pts[(i + 1) % pts.size()]).len();
+		}
+		return ret;
+	}
+};
+```
+
 ### 平面凸包
 ```c++
 vector<Point> andrew(vector<Point> &points) {
@@ -2844,6 +2874,44 @@ vector<Point> andrew(vector<Point> &points) {
 		stk.push_back(points[i]);
 	}
 	return stk;
+}
+```
+
+### 半平面交
+```c++
+vector<Line> half_inter(vector<Line> lines) {
+	lines.push_back({{-inf, 0.0l}, {0.0l, -1.0l}});
+	lines.push_back({{inf, 0.0l}, {0.0l, 1.0l}});
+	lines.push_back({{0.0l, inf}, {-1.0l, 0.0l}});
+	lines.push_back({{0.0l, -inf}, {1.0l, 0.0l}});
+	sort(lines.begin(), lines.end(), [](const Line &a, const Line &b) {
+		int c = cmp(a.v.arg(), b.v.arg());
+		if(c != 0)
+			return c == -1;
+		return sign(cross(a.v, b.p - a.p)) < 0;
+	});
+	deque<Line> dq;
+	auto bad = [](const Line &l, const Line &b, const Line &c) {
+		auto p = inter(b, c);
+		return to_left(l, p) < 0;
+	};
+	for(auto &l : lines) {
+		if(!dq.empty() && cmp(l.v.arg(), dq.back().v.arg()) == 0) {
+			if(to_left(l, dq.back().p + dq.back().v) < 0)
+				dq.back() = l;
+			continue;
+		}
+		while(dq.size() > 1 && bad(l, dq.back(), dq[dq.size() - 2]))
+			dq.pop_back();
+		while(dq.size() > 1 && bad(l, dq[0], dq[1]))
+			dq.pop_front();
+		dq.push_back(l);
+	}
+	while(dq.size() > 1 && bad(dq[0], dq.back(), dq[dq.size() - 2]))
+		dq.pop_back();
+	while(dq.size() > 1 && bad(dq.back(), dq[0], dq[1]))
+		dq.pop_front();
+	return vector<Line>(dq.begin(), dq.end());
 }
 ```
 
@@ -3039,6 +3107,8 @@ string manacher(const string &_s) {
 ```
 
 ### AC自动机
+**千万不要忘了build！**
+
 ```c++
 struct ACAM {
 	ACAM() : nodes(1) {}
