--- a/板子.md
+++ b/板子.md
@@ -86,6 +86,7 @@ int main() {
   - [直线](#直线)
   - [线段](#线段)
   - [平面凸包](#平面凸包)
+  - [半平面交](#半平面交)
 - [字符串](#字符串)
   - [KMP](#kmp)
   - [Z函数/扩展KMP](#z函数扩展kmp)
@@ -2757,7 +2758,8 @@ int is_inter(const Line &l1, const Line &l2) {
 	return parallel(l1, l2) ? 0 : 1;
 }
 Point inter(const Line &a, const Line &b) {
-	assert(!parallel(a, b));
+	if(parallel(a, b))
+		throw invalid_argument("a and b are parallel");
 	Vector v = a.v * (cross(b.v, a.p - b.p) / cross(a.v, b.v));
 	return a.p + v;
 }
@@ -2892,8 +2894,12 @@ vector<Line> half_inter(vector<Line> lines) {
 	});
 	deque<Line> dq;
 	auto bad = [](const Line &l, const Line &b, const Line &c) {
-		auto p = inter(b, c);
-		return to_left(l, p) < 0;
+		try {
+			auto p = inter(b, c);
+			return to_left(l, p) < 0;
+		} catch(const invalid_argument &) {
+			return false;
+		}
 	};
 	for(auto &l : lines) {
 		if(!dq.empty() && cmp(l.v.arg(), dq.back().v.arg()) == 0) {
@@ -2911,7 +2917,22 @@ vector<Line> half_inter(vector<Line> lines) {
 		dq.pop_back();
 	while(dq.size() > 1 && bad(dq.back(), dq[0], dq[1]))
 		dq.pop_front();
-	return vector<Line>(dq.begin(), dq.end());
+	vector<Line> ret(dq.begin(), dq.end());
+	int m = ret.size();
+	if(m < 3)
+		return {};
+	vector<Point> poly;
+	poly.reserve(m);
+	for(int i = 0; i < m; ++i) {
+		try {
+			poly.emplace_back(inter(ret[i], ret[(i + 1) % m]));
+		} catch(const invalid_argument &) {
+			return {};
+		}
+	}
+	if(poly.size() != m)
+		return {};
+	return ret;
 }
 ```
 
